dark mode and fixed some css

--- a/transportation-ar-viewer/src/App.css
+++ b/transportation-ar-viewer/src/App.css
@@ -1,17 +1,18 @@
-* {
+body {
 	margin: 0;
 	padding: 0;
 	text-align: center;
+	display: flex;
+	justify-content: center;
 }
 model-viewer {
-	max-width: 100%;
-	max-height: 100vh;
 	margin: auto;
+	width: 90%;
+	height: 90%;
 }
 
 .MuiCard-root {
 }
 
 .MuiBox-root {
-	max-width: 75vw;
 }
